NEW FEATURE:  PlayerOption:  Perspective - Incoming
NEW FEATURE:  Set default player and song options in stepmania.ini using 
	DefaultModifiers.
NEW FEATURE:  Courses can be organized into group folders.  See 
	README-FIRST.html for details.
NEW FEATURE:  Switch current theme from TitleMenu with L,L,L,R,R,R,L,R.
NEW FEATURE:  Switch current announcer from TitleMenu with L,L,R,R,L,R,L,R.

----------------------- Version 3.01 ---------------------------
CHANGE:  Simplified NoteSkin tap graphic format.  Old NoteSkins will need to 
	update the tap graphic.
NEW FEATURE:  AutoSync status now shown during gameplay with icon
NEW FEATURE:  added autogen icon to select music
NEW FEATURE:  toggle for easter eggs in Machine Options
NEW FEATURE:  marvelous step timing togglable in Machine Options
NEW FEATURE:  Grade AAAA (all marvelous)
CHANGE:  Only show ScreenHowToPlay if at least one player chose easy
NEW FEATURE: New High Score screen
NEW FEATURE: Full "attract" sequence
NEW FEATURE: .SM files can now contain UTF-8 text.
NEW FEATURE: New alignment tags for bitmap fonts.
NEW FEATURE: Bitmap fonts now support full Unicode mapping.
CHANGE:  Internal precision increased; 32nd notes are no longer rounded.
NEW FEATURE: Added "RANDOM" to music select.
CHANGE:  Loading optimizations.
NEW FEATURE: Caution and group select screens can now be disabled.
CHANGE:  Input, renderer and sound subsystems rewritten.
BUG FIX: Music scrollbar fixed.
CHANGE:  Faster music wheel sort changing and scrolling.
CHANGE:  Ignore invalid KSFs.
NEW FEATURE: DWI SAMPLESTART and SAMPLELENGTH in milliseconds is now
         supported.
CHANGE:  Courses are no longer limited to 300 songs.
CHANGE:  The radar display is improved.
NEW FEATURE: The Caution and Select Group screens can now be disabled.
CHANGE:  OKs now count as a step in score calculation.
CHANGE:  Maximum number of hold steps removed.
BUG FIX:  Fixed "autogen doesn't generate patterns for all difficulties for
         some songs"